# CPP-DPOR

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: README.md  profile_two_phase_commit_timeout_perf.sh
benchmarks/common/: two_phase_commit_benchmark.hpp
benchmarks/two_phase_commit/: CMakeLists.txt  main.cpp
benchmarks/two_phase_commit_timeout/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  StaticAnalysis.cmake  dporConfig.cmake.in
dev-container/: Dockerfile  README.md  build-image.sh  run-container.sh
docs/: api.md  architecture.md  fifo_p2p_plan.md  merged_performance_optimization_plan.md  non_recursive_dpor_plan.md  parallel_exploration_implementation.md  parallel_exploration_plan.md  performance_optimization_plan.md
examples/minimal/: CMakeLists.txt  main.cpp
examples/two_phase_commit/: CMakeLists.txt  README.md  protocol.hpp  simulation.hpp  two_phase_commit_test.cpp  udp_network.hpp
examples/two_phase_commit_timeout/: CMakeLists.txt  README.md  protocol.hpp  simulation.hpp  two_phase_commit_test.cpp  udp_network.hpp
examples/two_phase_commit_timeout/sim/: bridge.hpp  core.hpp  crash_before_decision.hpp  crash_environment.hpp  dpor_types.hpp  nominal.hpp  nominal_environment.hpp  programs.hpp
include/dpor/algo/: dpor.hpp  program.hpp
include/dpor/api/: session.hpp
include/dpor/model/: consistency.hpp  event.hpp  execution_graph.hpp  exploration_graph.hpp  relation.hpp
scripts/: run_clang_format.sh  run_tsan.sh
src/: header_check.cpp
src/api/: session.cpp
tests/: CMakeLists.txt  benchmark_cli_test.cpp  consistency_test.cpp  dpor_stress_test.cpp  dpor_test.cpp  exploration_graph_test.cpp  model_types_test.cpp  relation_test.cpp  session_test.cpp
tests/support/: oracle.hpp  oracle_core.hpp
